FE: [Refactor/Fix] Fixed date and wrapping conf (#132)
* Dev fe (#127)

* final

* fix error (#126)

fix error

* m

* Delete package-lock.json

* Delete package.json

* Delete .eslintrc.json

* Delete .prettierrc.json

* Delete tsconfig.json

* Dev fe (#128)

* final

* fix error (#126)

fix error

* m

* Delete .gitignore

* Dev fe (#129)

* final

* fix error (#126)

fix error

* m

* Delete AnswerContent.tsx

* Delete ItemList.tsx

* Delete index.tsx

* Delete index.css

* reverting to 1da23b7

* FE: [Merge] Main revert and merged from dev-fe

* first commit

* fixed date func and text formatting, cleanup

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,5 @@
 body {
-<<<<<<< HEAD
   margin: auto;
-=======
-  margin: 0;
->>>>>>> 155cb716278e134386ea3ca3410fe1ad2c7b30c9
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
